--- a/portscanner/templates/portscanner/home.html
+++ b/portscanner/templates/portscanner/home.html
@@ -4,7 +4,11 @@
 {% endblock title %}
 
 {% block css %}
+<link href="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/css/bootstrap4-toggle.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/js/bootstrap4-toggle.min.js"></script>
+
 <style>
+
 body{
     background-color: #171f30;
     padding: 2%;
@@ -133,6 +137,31 @@ h1{
 .padding-spacer{
     padding: 50px 0px;
 }
+
+.area-full{
+    width: 100%;
+	padding: 20px;
+    height: 300px;
+    border-radius: 20px;
+	background: #343a40;
+	color: white;
+}
+
+.active{
+	color: #5f5;
+}
+
+.space-down{
+	margin-bottom: 30px;
+}
+
+.hor-spa{
+	margin-left: 10px;
+}
+
+.ver-spacer{
+	padding: 20px 0px;
+}
  
 </style>
 {% endblock css %}
@@ -145,18 +174,48 @@ h1{
     <div class="row justify-content-md-center padding-spacer">
         <form action="scan/" class="form-inline" id="scan-form">
             <input type="text" name="domain" class="form-control mb-2 mr-sm-2" id="domain-text" placeholder="domain/IP"/>
-            <input type="submit" class="btn btn-primary mb-2" id="scan-button" value="Scan">
+			{% comment %} <input type="checkbox" name="fastScan" class="form-control hor-spa" id="fast-scan-id" data-toogle="tooltip" data-placement="bottom" title="Fast Scan" checked/> {% endcomment %}
+			<input type="checkbox" name="fastScan" checked data-toggle="toggle" data-on="Fast Scan" data-off="Deep Scan" data-onstyle="success" data-offstyle="danger" checked>            
+			<input type="submit" class="btn btn-primary mb-2 hor-spa" id="scan-button" value="Scan"/>
         </form>
     </div>
 
     <div class="row justify-content-md-center">
-        <div id="loader" class="content">
+        <div id="loader" class="content space-down">
             <div class="loading">
                 <p>Scanning</p>
                 <span></span>
             </div>
         </div>
     </div>
+
+    <div id="text-area-id" class="row justify-content-md-center">
+        <textarea id="outputArea" class="area-full" disabled>
+            Nmap output Here
+        </textarea>
+    </div>
+
+	<div id="table-id" class="row justify-content-md-center">
+		<table class="table table-dark" style="border-radius:20px;">
+			<thead>
+				<tr>
+					<th scope="col">#</th>
+					<th scope="col">Port</th>
+					<th scope="col">Service</th>
+					<th scope="col">State</th>
+					<th scope="col">Product</th>
+				</tr>
+			</thead>
+			<tbody id="table-body">
+				
+			</tbody>
+		</table>
+	</div>
+
+	<div class="row ver-spacer justify-content-md-center">
+		<button id="change-btn" class="btn btn-info">Show Table</button>
+	</div>
+
 </div>
 
 <script>
@@ -184,32 +243,101 @@ $('#scan-form').submit(function(event){
 
     request.done(function(response, textStatus, jqXHR){
         console.log(response);
-        $('#loader').hide();
-        $inputs.prop("disabled", false);
+		var task_id = response.task_id;
+		console.log(task_id);
+		//create a polling request to scanStatus to server
+		var poll_interval = setInterval(function(){
+			$.ajax({
+				url:'/status/'+task_id+'/',
+				type: "GET"
+			}).done(function(data, status, jqXHR){
+				console.log(data);
+				if (data.task_status=="SUCCESS"){
+					$inputs.prop("disabled", false);
+					$('#loader').hide();
+					clearInterval(poll_interval);
+					savedData = data;
+					showData(data);
+				}
+				else if(data.task_status=="FAILURE"){
+					$inputs.prop("disabled", false);
+					$('#loader').hide();
+					clearInterval(poll_interval);
+					$('#outputArea').val('FAILURE SCANNING');
+				}
+			}).fail(function(data, status, error){
+				console.log("ERROR: "+error);
+				$inputs.prop("disabled", false);
+				$('#loader').hide();
+				clearInterval(poll_interval);
+			});
+		}, 5000);
     });
 
     request.fail(function(jqXHR, textStatus, errorThrown){
         console.error("Following error occur: "+textStatus, errorThrown);
+		$('#outputArea').val('Invalid IP / Domain couldn\'t be parsed.');
+		$('#table-body').html('<tr><td colspan="5">Invalid IP / Domain couldn\'t be parsed.</td></tr>');
+		$inputs.prop("disabled", false);
+		$('#loader').hide();
     });
 
-    //console.log('url:',url);
-    //console.log( $('#domain-text').val());
-    /*
-    $.post(url, 
-    {
-        domain: $('#domain-text').val()
-    },
-    function(data, status){
-        //success
-        console.log(data);
-        $('#loader').hide();
-    },
-    function(){
-        //failure
-        console.log('failed');
-    });
-    */
 
+	function showData(data){
+		$('#table-body').html('');
+		var output = '';
+		output += 'Nmap Scan started at '+data.result.stats.startstr+'\n\n';
+		if(data.result.ip){
+			for(var i=0; i<data.result[data.result.ip].length; i++){
+				var d = data.result[data.result.ip][i];
+				try{
+					var service_name = d['service']['name'];
+					var product = d['service']['product'];
+				}catch(err){
+					var service_name = 'Unknown';
+				}
+				output += d['portid']+' - '+d['state']+' # '+'\n';
+				if (service_name!="Unknown"){
+					output += '  |----> '+service_name;
+				}
+				if (product!=undefined){
+					output += ' % '+product;
+				}
+				output += '\n\n';
+				var bs = "";
+				var be = "";
+				if(d['state']=='open'){
+					bs="<b style='color:green;'>";
+					be = "</b>";
+				}
+				$('#table-body').append(`<tr>
+					<td scope="row">`+String(i+1)+`</td>
+					<td>`+bs+ d['portid']+ be+`</td>
+					<td>`+bs+ service_name+ be+`</td>
+					<td>`+bs+ d['state']+ be+`</td>
+					<td>`+bs+ product+ be+`</td>
+				</tr>
+				`);
+			}
+		}
+		output += '\nNmap Scan ended at '+data.result.runtime.timestr+'\n';
+		$('#outputArea').val(output);
+	}
+});
+
+
+$('#table-id').hide();
+
+$('#change-btn').click(function(){
+	if($('#table-id').is(':hidden')){
+		$('#text-area-id').hide();
+		$('#table-id').show();
+		$('#change-btn').html("Show Text");
+	}else{
+		$('#table-id').hide();
+		$('#text-area-id').show();
+		$('#change-btn').html("Show Table");
+	}
 });
 </script>
 
